{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 27,
  "lineage": "cee4f02b-2e50-f789-37bd-0cd0f6264519",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06d2a97720664a092",
            "arn": "arn:aws:ec2:us-east-1:110791536460:instance/i-0a01ac75ff6143266",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a01ac75ff6143266",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06b7e6ea7040f72f1",
            "private_dns": "ip-10-0-0-231.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0571c414a45b0a806",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-021bae2be205796a5",
            "tags": {
              "Name": "itkmitl-Server0",
              "itclass": "NPA2023",
              "itgroup": "Group18"
            },
            "tags_all": {
              "Name": "itkmitl-Server0",
              "itclass": "NPA2023",
              "itgroup": "Group18"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-050838a51555c3bc5"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_web",
            "data.aws_ami.aws-linux",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06d2a97720664a092",
            "arn": "arn:aws:ec2:us-east-1:110791536460:instance/i-04841c30c0a1b2b94",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04841c30c0a1b2b94",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-014808b43c8170826",
            "private_dns": "ip-10-0-1-92.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.92",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a432e9c381af73b2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0757ea21fd350e6d0",
            "tags": {
              "Name": "itkmitl-Server1",
              "itclass": "NPA2023",
              "itgroup": "Group18"
            },
            "tags_all": {
              "Name": "itkmitl-Server1",
              "itclass": "NPA2023",
              "itgroup": "Group18"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-050838a51555c3bc5"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_web",
            "data.aws_ami.aws-linux",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "webLB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:110791536460:loadbalancer/app/web-elb/f5b8146821dbefb5",
            "arn_suffix": "app/web-elb/f5b8146821dbefb5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-elb-1986162916.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:110791536460:loadbalancer/app/web-elb/f5b8146821dbefb5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-elb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-029e6093a015226a1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-021bae2be205796a5"
              },
              {
                "subnet_id": "subnet-0757ea21fd350e6d0"
              }
            ],
            "subnets": [
              "subnet-021bae2be205796a5",
              "subnet-0757ea21fd350e6d0"
            ],
            "tags": {
              "Name": "itkmitl-webLB",
              "itclass": "NPA2023",
              "itgroup": "Group18"
            },
            "tags_all": {
              "Name": "itkmitl-webLB",
              "itclass": "NPA2023",
              "itgroup": "Group18"
            },
            "vpc_id": "vpc-0da04d299b7d24d87",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.elb-sg",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lbListener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:110791536460:listener/app/web-elb/f5b8146821dbefb5/62ce180c98ee9cf5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:110791536460:targetgroup/tf-target-group/8e7f30cc83e95723",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:110791536460:listener/app/web-elb/f5b8146821dbefb5/62ce180c98ee9cf5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:110791536460:loadbalancer/app/web-elb/f5b8146821dbefb5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "itkmitl-lbListener",
              "itclass": "NPA2023",
              "itgroup": "Group18"
            },
            "tags_all": {
              "Name": "itkmitl-lbListener",
              "itclass": "NPA2023",
              "itgroup": "Group18"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.webLB",
            "aws_lb_target_group.tgp",
            "aws_security_group.elb-sg",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tgp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:110791536460:targetgroup/tf-target-group/8e7f30cc83e95723",
            "arn_suffix": "targetgroup/tf-target-group/8e7f30cc83e95723",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:110791536460:targetgroup/tf-target-group/8e7f30cc83e95723",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "itkmitl-tgp",
              "itclass": "NPA2023",
              "itgroup": "Group18"
            },
            "tags_all": {
              "Name": "itkmitl-tgp",
              "itclass": "NPA2023",
              "itgroup": "Group18"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0da04d299b7d24d87"
          },
          "dependencies": [
            "aws_lb.webLB",
            "aws_security_group.elb-sg",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tgattach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:110791536460:targetgroup/tf-target-group/8e7f30cc83e95723-20230421074612828500000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:110791536460:targetgroup/tf-target-group/8e7f30cc83e95723",
            "target_id": "i-0a01ac75ff6143266"
          },
          "dependencies": [
            "aws_instance.Servers",
            "aws_lb.webLB",
            "aws_lb_target_group.tgp",
            "aws_security_group.allow_ssh_web",
            "aws_security_group.elb-sg",
            "data.aws_ami.aws-linux",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:110791536460:targetgroup/tf-target-group/8e7f30cc83e95723-20230421074613224200000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:110791536460:targetgroup/tf-target-group/8e7f30cc83e95723",
            "target_id": "i-04841c30c0a1b2b94"
          },
          "dependencies": [
            "aws_instance.Servers",
            "aws_lb.webLB",
            "aws_lb_target_group.tgp",
            "aws_security_group.allow_ssh_web",
            "aws_security_group.elb-sg",
            "data.aws_ami.aws-linux",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:110791536460:security-group/sg-050838a51555c3bc5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050838a51555c3bc5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "npaWk11_demo",
            "name_prefix": "",
            "owner_id": "110791536460",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "itkmitl-serverSG",
              "itclass": "NPA2023",
              "itgroup": "Group18"
            },
            "tags_all": {
              "Name": "itkmitl-serverSG",
              "itclass": "NPA2023",
              "itgroup": "Group18"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da04d299b7d24d87"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:110791536460:security-group/sg-029e6093a015226a1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029e6093a015226a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb_sg",
            "name_prefix": "",
            "owner_id": "110791536460",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "itkmitl-elbSG",
              "itclass": "NPA2023",
              "itgroup": "Group18"
            },
            "tags_all": {
              "Name": "itkmitl-elbSG",
              "itclass": "NPA2023",
              "itgroup": "Group18"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da04d299b7d24d87"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:110791536460:network-acl/acl-09abf01b3cdc02bce",
            "default_network_acl_id": "acl-09abf01b3cdc02bce",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-09abf01b3cdc02bce",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "110791536460",
            "subnet_ids": [
              "subnet-021bae2be205796a5",
              "subnet-0757ea21fd350e6d0"
            ],
            "tags": {
              "Name": "itkmitl-VPC",
              "itclass": "NPA2023",
              "itgroup": "Group18"
            },
            "tags_all": {
              "Name": "itkmitl-VPC",
              "itclass": "NPA2023",
              "itgroup": "Group18"
            },
            "vpc_id": "vpc-0da04d299b7d24d87"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:110791536460:route-table/rtb-01ddb1b597c92cc63",
            "default_route_table_id": "rtb-01ddb1b597c92cc63",
            "id": "rtb-01ddb1b597c92cc63",
            "owner_id": "110791536460",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "itkmitl-VPC",
              "itclass": "NPA2023",
              "itgroup": "Group18"
            },
            "tags_all": {
              "Name": "itkmitl-VPC",
              "itclass": "NPA2023",
              "itgroup": "Group18"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0da04d299b7d24d87"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:110791536460:security-group/sg-041a51595ca9ea429",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-041a51595ca9ea429",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "110791536460",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "itkmitl-VPC",
              "itclass": "NPA2023",
              "itgroup": "Group18"
            },
            "tags_all": {
              "Name": "itkmitl-VPC",
              "itclass": "NPA2023",
              "itgroup": "Group18"
            },
            "vpc_id": "vpc-0da04d299b7d24d87"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:110791536460:internet-gateway/igw-0ab489819110f0208",
            "id": "igw-0ab489819110f0208",
            "owner_id": "110791536460",
            "tags": {
              "Name": "itkmitl-VPC",
              "itclass": "NPA2023",
              "itgroup": "Group18"
            },
            "tags_all": {
              "Name": "itkmitl-VPC",
              "itclass": "NPA2023",
              "itgroup": "Group18"
            },
            "vpc_id": "vpc-0da04d299b7d24d87"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ab489819110f0208",
            "id": "r-rtb-0dcb8a16c74339ee71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dcb8a16c74339ee7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:110791536460:route-table/rtb-0dcb8a16c74339ee7",
            "id": "rtb-0dcb8a16c74339ee7",
            "owner_id": "110791536460",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ab489819110f0208",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "itkmitl-VPC",
              "itclass": "NPA2023",
              "itgroup": "Group18"
            },
            "tags_all": {
              "Name": "itkmitl-VPC",
              "itclass": "NPA2023",
              "itgroup": "Group18"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da04d299b7d24d87"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b689770d9bb42bc5",
            "route_table_id": "rtb-0dcb8a16c74339ee7",
            "subnet_id": "subnet-021bae2be205796a5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06144037adfea2438",
            "route_table_id": "rtb-0dcb8a16c74339ee7",
            "subnet_id": "subnet-0757ea21fd350e6d0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:110791536460:subnet/subnet-021bae2be205796a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021bae2be205796a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "110791536460",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "itkmitl-VPC",
              "itclass": "NPA2023",
              "itgroup": "Group18"
            },
            "tags_all": {
              "Name": "itkmitl-VPC",
              "itclass": "NPA2023",
              "itgroup": "Group18"
            },
            "vpc_id": "vpc-0da04d299b7d24d87"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:110791536460:subnet/subnet-0757ea21fd350e6d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0757ea21fd350e6d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "110791536460",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "itkmitl-VPC",
              "itclass": "NPA2023",
              "itgroup": "Group18"
            },
            "tags_all": {
              "Name": "itkmitl-VPC",
              "itclass": "NPA2023",
              "itgroup": "Group18"
            },
            "vpc_id": "vpc-0da04d299b7d24d87"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:110791536460:vpc/vpc-0da04d299b7d24d87",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09abf01b3cdc02bce",
            "default_route_table_id": "rtb-01ddb1b597c92cc63",
            "default_security_group_id": "sg-041a51595ca9ea429",
            "dhcp_options_id": "dopt-026e073fc7fc5d978",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0da04d299b7d24d87",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01ddb1b597c92cc63",
            "owner_id": "110791536460",
            "tags": {
              "Name": "itkmitl-VPC",
              "itclass": "NPA2023",
              "itgroup": "Group18"
            },
            "tags_all": {
              "Name": "itkmitl-VPC",
              "itclass": "NPA2023",
              "itgroup": "Group18"
            }
          }
        }
      ]
    }
  ]
}